# ak2zc-seminar-project

./: .gitignore  README.md  cviko1  cviko1-1  cviko1-1.c  cviko1.c
cv2-pr1/: CMakeLists.txt  Makefile  cv2-pr1  main  main.c
cv2-pr2-calc/: CMakeLists.txt  Makefile  calculator.c  calculator.h  cv2-pr2-calc  io.c  io.h  main.c
david-knieradl_ak2zc_seminar/: CMakeLists.txt  arrayext.c  arrayext.h  david-knieradl_ak2zc_seminar.c  david-knieradl_ak2zc_seminar.h  io.c  io.h  list.c  list.h
